--- a/.github/workflows/daibiaoszrw.yml
+++ b/.github/workflows/daibiaoszrw.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '2 3/6 * * *'
-jobs:
+jobs:  # 23793
   build:
     runs-on: ubuntu-latest
     steps:
